<resources>
    <string name="app_name">ToDo Manager</string>
    <string name="new_proyect">NEW PROJECT</string>
    <string name="all_pendientes">PENDINGS</string>
    <string name="all_task">Tasks</string>
    <string name="pendientes_day">Pendings</string>
    <string name="back">Back</string>
    <string name="pendientes">CATEGORY A</string>
    <string name="pendientes_title">PENDINGS</string>
    <string name="activities">CATEGORY B</string>
    <string name="start_date">Start date:</string>
    <string name="execution_tim">Execution date:</string>
    <string name="rest_time">Time remaining:</string>
    <string name="time">Time:</string>
    <string name="definity_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="new_task">ADD</string>
    <string name="today">TODAY</string>
    <string name="real_date">Real date:</string>
    <string name="prox_date">Estimated date:</string>
    <string name="name">Name:</string>
    <string name="comments">Details:</string>
    <string name="exit">EXIT</string>
    <string name="settings">SETTINGS</string>
    <string name="aboutMe">About us</string>
    <string name="title_activity_menyu" translatable="false">MenyuActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="url_web" translatable="false">http://expresionweb.x10host.com/</string>
    <string name="name_yop" translatable="false">Fernando Arana Andrade</string>
    <string name="about_app">About this app</string>
    <string name="settings_minus">Settings</string>
    <string name="proyects">PROJECTS</string>
    <string name="proyect">PROJECT</string>
    <string name="tasks_">TASKS</string>
    <string name="task_">TASK</string>
    <string name="title_activity_main">To do: Manager</string>
    <string name="title_activity_calendar">CALENDAR</string>
    <string name="calendar_minus">Calendar</string>
    <string name="changeColorRed">Change to red:</string>
    <string name="changeColorYellow">Change to yellow:</string>
    <string name="changeColorWhite">Change to white:</string>
    <string name="changeColorOrange">Change to orange:</string>
    <string name="daysBefore">days before</string>
    <string name="weekBefore">weeks before</string>
    <string name="mouthBefore">months before</string>
    <string name="daysAfter">days later</string>
    <string name="weekAfter">weeks later</string>
    <string name="mouthAfter">months later</string>
    <string name="green">GREEN</string>
    <string name="white">WHITE</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="orange">ORANGE</string>
    <string name="refresh">Refresh</string>
    <string name="semanas">weeks left</string>
    <string name="fecha_final">Final date:</string>
    <string name="dias">days left</string>
    <string name="meses_">months left</string>
    <string name="SEMANAS">weeks</string>
    <string name="DIAS">days</string>
    <string name="MESES">months</string>
    <string name="HOY">TODAY</string>
    <string name="SEMANA">WEEK</string>
    <string name="TODO">ALL</string>
    <string name="MES">MONTHS</string>
    <string name="HORAS">HOURS</string>
    <string name="MINUTOS">MINUTES</string>
    <string name="_15minutos">15 minutes</string>
    <string name="_5minutos">5 minutes</string>
    <string name="_30minutos">30 minutes</string>
    <string name="_1Hora">One hour</string>
    <string name="TODOS">ALL</string>
    <string name="Tarea">Task</string>
    <string name="guardada">saved</string>
    <string name="setDate">Set date</string>
    <string name="salir_definitivamente">Exit</string>
    <string name="tiempo_para_recordar_despues">Snooze:</string>
    <string name="proyectoGuardado">Saved project</string>
    <string name="eliminar_definitivamente">Delete</string>
    <string name="tiempo_finalizado">TIME IS OVER</string>
    <string name="Finished_project">Finished project</string>
    <string name="snoozeAction">SNOOZE</string>
    <string name="faltan">""</string>
    <string name="faltan_una_semana_">One week left</string>
    <string name="falta_un_dia">One day left</string>
    <string name="fata_un_mes">One month left</string>
    <string name="fecha_estimada">Date to do task:</string>
    <string name="notExitTask">Task deleted before</string>
    <string name="notificationsActive">Active notifications:</string>
    <string name="fechaEstimada">Date to do task:</string>
    <string name="notificationSettings">Set notification</string>
    <string name="TaskTypeList">Categories list</string>
    <string name="pendientesDelDia">Only today:</string>
    <string name="El_nombre_no_puede_estar_vacio">Name is empty</string>
    <string name="El_rango_es_inválido">Invalid range</string>
    <string name="el_nombre_no_es_valido">Invalid name</string>
    <string name="se_guardo_correctamente">Saved</string>
    <string name="realTaskDate">Task done:</string>
    <string name="edit_colors_tasks_title">Edit task colors</string>
    <string name="edit_colors_tasks">Edit default task colors</string>
    <string name="changeColorSwich">Change the color of tasks according to the date of the task:</string>
    <string name="falta_la_cantidad_para_el_color">Write range to color</string>
    <string name="se_eliminaran_TODAS_la_tareas_de_este_tipo">ALL tasks of this category will be deleted</string>
    <string name="El_tiempo_no_puede_estar_vacio">Time can not be empty</string>
    <string name="La_fecha_novpuede_estar_vacia">The date can not be empty</string>
    <string name="No_se_ha_configurado_la_fecha_de_inicio">The start date has not been set</string>
    <string name="Se_eliminarán_todos_las_tareas_relacioandas_a_este_proyecto">All tasks related to this project will be eliminated</string>
    <string name="No_se_ha_seleccionado_un_tipo_de_tarea">Any category has not been selected</string>
    <string name="No_se_ha_seleccionado_un_proyecto">Project has not been selected</string>
    <string name="No_se_a_configurado_la_fecha_estimada">Estimated date has not been set</string>
    <string name="proyect_deleted">Project deleted</string>
    <string name="task_delete">Task deleted</string>
    <string name="categories">Categories</string>
    <string name="unfinishTask">Tasks to do</string>
    <string name="youNeedToCreateAProjectBefore">You need to create a project before</string>
    <string name="youNeedToCreateAHaveCategories">You need to have at least one category created</string>
    <string name="ThereAreNoPending">There are no pendings</string>
    <string name="estimatedDate">On task date</string>
    <string name="specifyDate">Set date</string>
    <string name="youNeedToSetDate">You need to set date</string>
    <string name="finish">Done</string>
    <string name="_24Horas">24 hours</string>
    <string name="FINISH">DONE</string>
    <string name="editProyect">Edit project</string>
    <string name="filterList">Filter list</string>
    <string name="ThereAreNoTasksToFilter">There are no tasks to this project</string>
    <string name="ThereAreNoTasks">There are no tasks</string>
    <string name="notificationsSettings">Notification settings</string>
    <string name="alertDeleteCategory">Delete category (%d tasks will be delete)</string>
    <string name="addNotification">Add notification</string>
    <string name="setHour">Set hour</string>
    <string name="youNeedToSetHour">You need to set hour</string>
    <string name="hayTareas">%d tasks</string>
    <string name="creationUp">creation ↑</string>
    <string name="tagUp">tag ↑</string>
    <string name="dateUp">date ↑</string>
    <string name="finish_order">done ↑</string>
    <string name="orderBy">Order by:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="all">ALL</string>
    <string name="none">NONE</string>
    <string name="ToDo">TO DO</string>
    <string name="done">DONE</string>
    <string name="creationDown">creation ↓</string>
    <string name="tagDown">tag ↓</string>
    <string name="dateDown">date ↓</string>
    <string name="finish_order_Down">done ↓</string>
    <string name="IfTaskDoesNotHaveDate">If task does not have date:</string>
    <string name="changeColors">Change colors</string>
    <string name="Next_notification">Next notification:</string>
    <string name="Search">Search</string>
    <string name="taskName">Task name</string>
    <string name="filter">Filter</string>
    <string name="RangeOfTime">Range of time</string>
    <string name="From_time">From</string>
    <string name="To_time">to</string>
    <string name="clear">clear</string>
</resources>
