<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_day_goals"
            android:icon="@drawable/ic_assignment_late"
            android:title="@string/day_goals" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_action_calendar_day"
            android:title="@string/calendar_minus" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/exit" />
    </group>

    <item android:title="@string/about_app">
        <menu>
            <item
                android:id="@+id/nav_aboutme"
                android:icon="@drawable/ic_comment"
                android:title="@string/aboutMe" />
        </menu>
    </item>

</menu>
