<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationsSettingsTaskActivity">

    <Switch
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notificationsActive"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/notifacionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_access_time_white"
        android:drawablePadding="1dp"
        android:onClick="set_hour"
        android:padding="7dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/setHour"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/switchNotification"
        app:layout_constraintStart_toStartOf="@+id/switchNotification"
        app:layout_constraintTop_toBottomOf="@+id/buttonDateNotification" />

    <Button
        android:id="@+id/buttonDateNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_action_calendar_day_white"
        android:drawablePadding="3dp"
        android:onClick="set_date"
        android:padding="2dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/setDate"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/switchNotification"
        app:layout_constraintStart_toStartOf="@+id/switchNotification"
        app:layout_constraintTop_toBottomOf="@+id/switchNotification" />

</android.support.constraint.ConstraintLayout>