<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Switch
        android:id="@+id/switchRangeDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16.0dip"
        android:layout_marginTop="16.0dip"
        android:text="@string/RangeOfTime"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18.0sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutRange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchRangeDates">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.0dip"
            android:layout_marginTop="32.0dip"
            android:layout_weight="1.0"
            android:text="@string/From_time"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18.0sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:onClick="endDate"
            android:paddingStart="5.0dip"
            android:paddingEnd="5.0dip"
            android:text="@string/specifyDate"
            android:textColor="@color/colorWhite"
            android:textSize="18.0sp"
            app:layout_constraintBottom_toBottomOf="@id/textView19"
            app:layout_constraintStart_toStartOf="@id/buttonStartDate" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.0dip"
            android:layout_marginEnd="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/To_time"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18.0sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/buttonStartDate"
            app:layout_constraintTop_toBottomOf="@id/textView18" />

        <Button
            android:id="@+id/buttonStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.0dip"
            android:layout_weight="1.0"
            android:background="@color/colorPrimary"
            android:onClick="startDate"
            android:paddingStart="5.0dip"
            android:paddingEnd="5.0dip"
            android:text="@string/specifyDate"
            android:textColor="@color/colorWhite"
            android:textSize="18.0sp"
            app:layout_constraintBottom_toBottomOf="@id/textView18"
            app:layout_constraintStart_toEndOf="@id/textView18" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>